--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <input id="userGuess" type="text" size=5>
     <button id="guessBtn">Guess!</button>
 
-    <h2 id="hiLo"></h2>
+    <div id="hiLo"></div>
 
     <div id="part2">
     <h3>Previous Guesses:<span id="userGuesses"></span></h3>
